fix: adjust z-index values in calendar and navbar styles

--- a/src/styles/_calendar.scss
+++ b/src/styles/_calendar.scss
@@ -44,7 +44,7 @@
   width: 100%;
   max-width: 1024px;
   height: 60vh;
-  z-index: -1;
+  // z-index: -1;
   .fc-dayGridMonth-view,
   .fc-view-harness {
     max-height: 80vh;
