--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -14,6 +14,7 @@
   display: flex;
   justify-content: center;
   border-radius: 12px 12px 0px 0px;
+  z-index: 1;
 }
 
 .link {
